# ismsnoop

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  SetupProject.cmake
test/: CMakeLists.txt
test/isms/: 1 In 2 Out Switch.ism  Fold.ism  INT-Bezyeah_Clock.ism  SA MiniVerb v.1.2a.ism  SA_MidSide_v.1.1.ism  Saturator.ism  Tiny Ring Mod.ism  ∞  MIRROR.ism
test/src/: library.cpp  library.h  library_unix.cpp  main.cpp
